Update on Adding QR System to Geo tagging system
Update on the Geo tagging system that will now accept the QR information intake!

--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@ function submitProof() {
   `;
 }
 </script>
+<script>
+  const params = new URLSearchParams(window.location.search);
+  const batchFromQR = params.get("batch");
 
+  if (batchFromQR) {
+    document.getElementById("batchId").value = batchFromQR;
+  }
+</script>
 </body>
 </html>
+
