--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       padding: 20px;
     }
 
-    input, button {
+    input, button, select {
       width: 100%;
       padding: 10px;
       margin-top: 10px;
@@ -37,12 +37,20 @@
 
   <h2>Geo-Tagged Waste Proof Submission</h2>
 
+  <!-- Role Selector -->
+  <label>Select Role</label>
+  <select id="role" onchange="handleRoleChange()">
+    <option value="collector">Collector</option>
+    <option value="recycler">Recycler</option>
+    <option value="auditor">Auditor</option>
+  </select>
+
   <!-- Batch ID -->
   <label>Batch ID</label>
-  <input type="text" id="batchId" placeholder="Batch ID" readonly>
+  <input type="text" id="batchId" readonly>
 
   <!-- Capture Location -->
-  <button onclick="captureLocation()">📍 Capture Geo-Location</button>
+  <button id="locationBtn" onclick="captureLocation()">📍 Capture Geo-Location</button>
 
   <div class="box" id="locationBox">
     Location not captured
@@ -50,10 +58,10 @@
 
   <!-- Photo Upload -->
   <label>Upload Proof Photo (optional)</label>
-  <input type="file" accept="image/*" capture="environment">
+  <input type="file" id="photoInput" accept="image/*" capture="environment">
 
   <!-- Submit Proof -->
-  <button onclick="submitProof()">✅ Submit Proof</button>
+  <button id="submitBtn" onclick="submitProof()">✅ Submit Proof</button>
 
   <!-- Proof Output -->
   <div class="box" id="output"></div>
@@ -63,12 +71,12 @@
     Proof Status: <span id="statusText">Not Submitted</span>
   </div>
 
-  <!-- Demo Verification Buttons -->
-  <button onclick="markVerified()" style="margin-top:10px;">
+  <!-- Auditor Actions -->
+  <button id="verifyBtn" onclick="markVerified()" style="margin-top:10px;">
     ✔ Mark as Verified
   </button>
 
-  <button onclick="markFlagged()">
+  <button id="flagBtn" onclick="markFlagged()">
     ⚠ Mark as Flagged
   </button>
 
@@ -82,6 +90,19 @@
     const batchFromQR = params.get("batch");
     if (batchFromQR) {
       document.getElementById("batchId").value = batchFromQR;
+    }
+
+    function handleRoleChange() {
+      const role = document.getElementById("role").value;
+
+      const isAuditor = role === "auditor";
+
+      document.getElementById("locationBtn").disabled = isAuditor;
+      document.getElementById("submitBtn").disabled = isAuditor;
+      document.getElementById("photoInput").disabled = isAuditor;
+
+      document.getElementById("verifyBtn").style.display = isAuditor ? "block" : "none";
+      document.getElementById("flagBtn").style.display = isAuditor ? "block" : "none";
     }
 
     function captureLocation() {
@@ -134,6 +155,9 @@
       document.getElementById("statusText").innerText = proofStatus;
       document.getElementById("statusText").style.color = "red";
     }
+
+    // Initialize default role behavior
+    handleRoleChange();
   </script>
 
 </body>
