--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <title>TRACEWASTE – Geo-Verified Waste Proof</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Website Icon -->
-  <link rel="icon" type="image/png" href="logo.png">
+  <!-- FAVICON (FORCE FIX) -->
+  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="favicon.png" sizes="32x32" type="image/png">
+  <link rel="shortcut icon" href="favicon.png" type="image/png">
 
   <style>
     body {
