Refactor index.html structure and styles

--- a/index.html
+++ b/index.html
@@ -2,179 +2,104 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>TRACEWASTE – Geo-Verified Waste Proof</title>
+  <title>TRACEWASTE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- FAVICON (FORCE FIX) -->
-  <link rel="icon" href="favicon.png" type="image/png">
-  <link rel="icon" href="favicon.png" sizes="32x32" type="image/png">
-  <link rel="shortcut icon" href="favicon.png" type="image/png">
 
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 520px;
+      max-width: 600px;
       margin: auto;
       padding: 20px;
-    }
-
-    input, button, select {
-      width: 100%;
-      padding: 10px;
-      margin-top: 10px;
-      font-size: 16px;
+      text-align: center;
     }
 
     .box {
       border: 1px solid #ccc;
+      padding: 15px;
+      margin-top: 20px;
+      text-align: left;
+    }
+
+    input, button {
+      width: 100%;
       padding: 10px;
-      margin-top: 15px;
-    }
-
-    h2 {
-      text-align: center;
-    }
-
-    #proofStatus, #incentiveBox {
-      margin-top: 15px;
-      font-weight: bold;
-    }
-
-    ul {
-      padding-left: 20px;
+      margin-top: 10px;
+      font-size: 16px;
     }
   </style>
 </head>
 
 <body>
 
-  <!-- LOGO -->
-  <div style="text-align:center; margin-bottom:15px;">
-    <img src="logo.png" alt="TRACEWASTE Logo" width="120">
+  <!-- BASIC HEADER -->
+  <h1>TRACEWASTE</h1>
+  <p><b>QR-Enabled, Geo-Verified Waste Traceability System</b></p>
+
+  <hr>
+
+  <!-- DEPLOYMENT CHECK -->
+  <div class="box">
+    <b>Deployment Status</b><br>
+    ✅ GitHub Pages is working if you can see this page.
   </div>
 
-  <h2>Geo-Tagged Waste Proof Submission</h2>
-
-  <!-- ROLE -->
-  <label>Select Role</label>
-  <select id="role" onchange="handleRoleChange()">
-    <option value="collector">Collector</option>
-    <option value="recycler">Recycler</option>
-    <option value="auditor">Auditor</option>
-  </select>
-
-  <!-- BATCH -->
-  <label>Batch ID</label>
-  <input type="text" id="batchId" readonly>
+  <!-- BATCH CHECK -->
+  <div class="box">
+    <b>Batch ID from QR</b><br>
+    <span id="batchText">No batch detected</span>
+  </div>
 
   <!-- LOCATION -->
-  <button id="locationBtn" onclick="captureLocation()">📍 Capture Geo-Location</button>
+  <button onclick="captureLocation()">📍 Capture Geo-Location</button>
 
   <div class="box" id="locationBox">
     Location not captured
   </div>
 
-  <!-- PHOTO -->
-  <label>Upload Proof Photo (optional)</label>
-  <input type="file" id="photoInput" accept="image/*" capture="environment">
-
   <!-- SUBMIT -->
-  <button id="submitBtn" onclick="submitProof()">✅ Submit Proof</button>
+  <button onclick="submitProof()">✅ Submit Proof</button>
 
-  <!-- OUTPUT -->
   <div class="box" id="output"></div>
 
-  <!-- STATUS -->
-  <div id="proofStatus">
-    Proof Status: <span id="statusText">Not Submitted</span>
-  </div>
-
-  <!-- INCENTIVES -->
-  <div id="incentiveBox">
-    Incentive Points: <span id="pointsText">0</span><br>
-    Incentive Status: <span id="pointsStatus">Not Eligible</span>
-  </div>
-
-  <!-- AUDITOR -->
-  <button id="verifyBtn" onclick="markVerified()">✔ Mark as Verified</button>
-  <button id="flagBtn" onclick="markFlagged()">⚠ Mark as Flagged</button>
-
-  <!-- TIMELINE -->
-  <div class="box">
-    <b>Batch Proof Timeline</b>
-    <ul id="timeline"></ul>
-  </div>
-
   <script>
-    let latitude = null, longitude = null;
-    let incentivePoints = 10;
-    let timeline = [];
-
+    // Read batch from URL
     const params = new URLSearchParams(window.location.search);
     const batch = params.get("batch");
+
     if (batch) {
-      document.getElementById("batchId").value = batch;
-      addTimeline("QR Scanned & Batch Loaded");
+      document.getElementById("batchText").innerText = batch;
     }
 
-    function addTimeline(event) {
-      timeline.push(event + " (" + new Date().toLocaleString() + ")");
-      const ul = document.getElementById("timeline");
-      ul.innerHTML = "";
-      timeline.forEach(e => {
-        const li = document.createElement("li");
-        li.innerText = e;
-        ul.appendChild(li);
-      });
-    }
-
-    function handleRoleChange() {
-      const isAuditor = document.getElementById("role").value === "auditor";
-      document.getElementById("locationBtn").disabled = isAuditor;
-      document.getElementById("submitBtn").disabled = isAuditor;
-      document.getElementById("photoInput").disabled = isAuditor;
-      document.getElementById("verifyBtn").style.display = isAuditor ? "block" : "none";
-      document.getElementById("flagBtn").style.display = isAuditor ? "block" : "none";
-    }
+    let lat = null, lon = null;
 
     function captureLocation() {
+      if (!navigator.geolocation) {
+        alert("Geolocation not supported");
+        return;
+      }
+
       navigator.geolocation.getCurrentPosition(pos => {
-        latitude = pos.coords.latitude;
-        longitude = pos.coords.longitude;
+        lat = pos.coords.latitude;
+        lon = pos.coords.longitude;
         document.getElementById("locationBox").innerHTML =
-          `Latitude: ${latitude}<br>Longitude: ${longitude}`;
-        addTimeline("Geo-location Captured");
+          "Latitude: " + lat + "<br>Longitude: " + lon;
       });
     }
 
     function submitProof() {
-      const t = new Date().toISOString();
+      if (!lat || !lon) {
+        alert("Capture location first");
+        return;
+      }
+
       document.getElementById("output").innerHTML =
-        `<b>Proof Submitted</b><br>Batch: ${batch}<br>Time: ${t}`;
-      document.getElementById("statusText").innerText = "Pending Verification";
-      document.getElementById("statusText").style.color = "orange";
-      document.getElementById("pointsText").innerText = incentivePoints;
-      document.getElementById("pointsStatus").innerText = "Locked";
-      addTimeline("Proof Submitted");
+        "<b>Proof Submitted</b><br>" +
+        "Batch: " + (batch || "N/A") + "<br>" +
+        "Time: " + new Date().toISOString();
     }
-
-    function markVerified() {
-      document.getElementById("statusText").innerText = "Verified";
-      document.getElementById("statusText").style.color = "green";
-      document.getElementById("pointsStatus").innerText = "Released ✔️";
-      addTimeline("Proof Verified by Auditor");
-    }
-
-    function markFlagged() {
-      document.getElementById("statusText").innerText = "Flagged";
-      document.getElementById("statusText").style.color = "red";
-      document.getElementById("pointsStatus").innerText = "Cancelled ❌";
-      document.getElementById("pointsText").innerText = "0";
-      addTimeline("Proof Flagged by Auditor");
-    }
-
-    handleRoleChange();
   </script>
 
 </body>
 </html>
+
